# takoyaki

./: README.md  flake.nix  hie.yaml  takoyaki.cabal
app/: Main.hs
src/: Engine.hs  Exp.hs  Htmx.hs
src/Demo/: Counter.hs  HazardHunter.hs  MineSweeper.hs  Todo.hs  TodoNG.hs
src/Takoyaki/: Engine.hs  EngineNG.hs  Htmx.hs  HtmxNG.hs
