cabal-version:      2.4
name:               takoyaki
version:            0.1.0.0
homepage:           https://github.com/morucci/takoyaki/README.md
bug-reports:        https://github.com/morucci/takoyaki/issues
synopsis:           HTMX Playground
description:        HTMX PLayground
license-file:       LICENSE
author:             Fabien Boucher
maintainer:         fabien.dot.boucher@gmail.com
copyright:          2022 Fabien Boucher
extra-source-files:
    README.md

common common-options
    default-language: Haskell2010
    default-extensions: LambdaCase
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , RecordWildCards
                      , NamedFieldPuns
                      , DeriveGeneric
                      , DataKinds
                      , OverloadedRecordDot
                      , QuasiQuotes
                      , TypeOperators
                      , TypeApplications
    ghc-options:      -Wall
                      -threaded

    build-depends:    base < 5

library
    import:           common-options
    exposed-modules:  Takoyaki.Htmx
                    , Takoyaki.Engine
                    , Demo.Counter
    build-depends:    servant
                    , servant-lucid
                    , servant-server
                    , servant-websockets
                    , servant-xstatic
                    , lucid
                    , lucid-xstatic
                    , string-interpolate
                    , aeson
                    , async
                    , containers
                    , lens
                    , lens-aeson
                    , text
                    , time
                    , mtl
                    , safe-exceptions
                    , stm
                    , http-api-data
                    , wai
                    , warp
                    , websockets
                    , xstatic
                    , xstatic-htmx
                    , xstatic-tailwind
    hs-source-dirs:   src

executable takoyaki
    import:           common-options
    main-is:          Main.hs

    build-depends:    takoyaki

    hs-source-dirs:   app
    default-language: Haskell2010
